# solduel-gaming-platform

./: .gitignore  CLAUDE.md  FRONTEND_SPECIFICATIONS.md  package.json  pnpm-lock.yaml  vercel.json
solduel/: .vercelignore  ARCHITECTURE.md  Anchor.toml  CLAUDE.md  GUIDE_MULTIJOUEUR.md  MIGRATION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
solduel/app/: .env.local.example  README.md  globals.css  layout.tsx  package.json  page.tsx  vercel.json
solduel/app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
solduel/app/app/games/dice-battle/: page.tsx
solduel/app/app/games/rps-arena/: page.tsx
solduel/app/app/leaderboard/: page.tsx
solduel/app/app/lottery/: page.tsx
solduel/app/components/: app-shell.tsx  initialize-config-button.tsx
solduel/app/components/games/: rps-arena-game.tsx  sol-duel-game.tsx
solduel/app/components/leaderboards/: leaderboards.tsx
solduel/app/components/profile/: user-profile.tsx
solduel/app/hooks/: use-game-state.ts
solduel/app/lib/: solduel-sdk.ts
solduel/app/scripts/: initialize-config.ts
solduel/components/games/: dice-battle-game.tsx  sol-duel-game.tsx
solduel/components/lottery/: lottery-wheel.tsx
solduel/contracts/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
solduel/contracts/programs/: Cargo.toml
solduel/contracts/programs/universal-game/: Anchor.toml  Cargo.toml
solduel/contracts/programs/universal-game/src/: events.rs  lib.rs  token.rs  vrf.rs
solduel/contracts/programs/universal-game/src/errors/: mod.rs
solduel/contracts/programs/universal-game/src/instructions/: game_lifecycle.rs  lottery.rs  mod.rs  multi_round.rs  simple_duel.rs  treasury.rs
solduel/contracts/programs/universal-game/src/state/: config.rs  game.rs  game_optimized.rs  mod.rs
solduel/contracts/tests/: universal-game.ts
solduel/docs/: API.md  PROJECT_STRUCTURE.md
solduel/hooks/: use-lottery.ts
solduel/idl/: universal_game.json
solduel/lib/: solduel-sdk.ts
solduel/programs/universal-game/: Cargo.toml
solduel/programs/universal-game/src/: constants.rs  errors.rs
solduel/scripts/: build.sh  deploy-devnet.sh  deploy-mainnet.sh
(+5 files in other folders)
