[package]
name = "universal-game"
version = "0.1.0"
description = "Universal gaming platform on Solana supporting multiple PvP game modes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["event-cpi", "init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }

# Randomness and VRF
switchboard-solana = "0.30.4"
getrandom = { version = "0.2", features = ["custom"] }

# Optimization and serialization
# Note: solana-program is already included via anchor-lang
borsh = "0.10"
bytemuck = "1.14"

# SPL Token support is provided by anchor-spl
# No need to explicitly include spl-token and spl-associated-token-account

# Additional utilities
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"